// This is the public API offered by the shopping cart crud entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "cloudstate/entity_key.proto";
import "cloudstate/sub_entity_key.proto";
import "cloudstate/crud_command_type.proto";
import "google/api/annotations.proto";
import "google/api/http.proto";
import "google/api/httpbody.proto";

package cloudstate.proxy.test.crud;

option java_package = "io.cloudstate.proxy.test.crud";

message AddLineItem {
    string shopping_id = 1 [(.cloudstate.entity_key) = true];
    string user_id = 2 [(.cloudstate.sub_entity_key) = true];
    string command_type = 3 [(.cloudstate.crud_command_type) = true];
    string product_id = 4;
    string name = 5;
    int32 quantity = 6;
}

message RemoveLineItem {
    string user_id = 1 [(.cloudstate.entity_key) = true];
    string product_id = 2;
}

message GetShoppingCart {
    string user_id = 1 [(.cloudstate.entity_key) = true];
}

message LineItem {
    string product_id = 1;
    string name = 2;
    int32 quantity = 3;
}

message Cart {
    repeated LineItem items = 1;
}

service ShoppingCart {
    rpc AddItem(AddLineItem) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/cart/{user_id}/items/add",
            body: "*",
        };
    }

    rpc RemoveItem(RemoveLineItem) returns (google.protobuf.Empty) {
        option (google.api.http).post = "/cart/{user_id}/items/{product_id}/remove";
    }

    rpc GetCart(GetShoppingCart) returns (Cart) {
        option (google.api.http) = {
          get: "/carts/{user_id}",
          additional_bindings: [{
            get: "/carts/{user_id}/items",
            response_body: "items"
          }]
        };
    }

    rpc ShowCartPage(GetShoppingCart) returns (google.api.HttpBody) {
        option (google.api.http).get = "/carts/{user_id}.html";
    }
}
